Correct flex-wrap inside screens

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ img {
   .photo:nth-child(4),
   .photo:nth-child(5) {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 50%;
   }
 
@@ -68,7 +68,7 @@ img {
   .photo:nth-child(3),
   .photo:nth-child(4) {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 33.3333%;
   }
 
@@ -86,13 +86,13 @@ img {
   .photo:nth-child(3),
   .photo:nth-child(4) {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 33.333%;
   }
 
   .photo:first-child {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 66.6666%;
   }
 
